# MetalShader

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  appDelegate.cpp  config.h  declarations.h  main.cpp  renderer.cpp  viewDelegate.cpp
